--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 PORT=4000
-DB_CNN=mongodb+srv://mati69lbt:z*jjM_qYpMW2p2B@cluster0.aitgwd6.mongodb.net/mern_calendar
+DB_CNN=mongodb+srv://Matias:EyPqkINjghFJhG2c@cluster0.3onbkw5.mongodb.net/mern_calendar
 SECRET_JWT_SEED=Esto-Es-Una-PaLaBR@_SeCRetA
 
-db_user= "mati69lbt";
-db_pass= "z*jjM_qYpMW2p2B"; 
+db_user= "Matias";
+db_pass= "EyPqkINjghFJhG2c"; 
+
+
+
+
+DB_CNN_2=mongodb+srv://Matias:EyPqkINjghFJhG2c@cluster0.aitgwd6.mongodb.net/mern_calendar
