--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ db_pass= "EyPqkINjghFJhG2c";
 
 
 DB_CNN_2=mongodb+srv://Matias:EyPqkINjghFJhG2c@cluster0.aitgwd6.mongodb.net/mern_calendar
+
+mongodb+srv://Matias:EyPqkINjghFJhG2c@cluster0.3onbkw5.mongodb.net/mern_calendar
